# droidcam-obs-virtual-output

./: CMakeLists.txt
src/: plugin.cc  yuv420_yuyv.c
